--- a/index.html
+++ b/index.html
@@ -2,39 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
 
-  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <title>Frontend Mentor | Clipboard landing page</title>
 
 </head>
 <body>
-  <main>
 
-    <div class="first-box">
-      <img src="/images/logo.svg" alt="fylo-logo">
-      <div class="fylo-icons">
-        <img src="/images/icon-document.svg" alt="document-icon">
-        <img src="/images/icon-folder.svg" alt="folder-icon">
-        <img src="/images/icon-upload.svg" alt="upload-icon">
-      </div>
+  <section class="main">
+    <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" alt="logo"></a>
+    <h1>A history of everything you copy</h1>
+    <p>Clipboard allows you to track and organize everything you
+      copy. Instantly access your clipboard on all your devices.</p>
+    <div class="buttons">
+      <button>Download for iOS</button>
+      <button>Download for Mac</button>
+    </div>
+  </section>
+  
+  <section class="about">
+    <h1>Keep track of your snippets</h1>
+    <p>Clipboard instantly stores any item you copy in the cloud,
+      meaning you can access your snippets immediately on all your
+      devices. Our Mac and iOS apps will help you organize everything.</p>
+    <div class="snippet-tracking">
+      <img src="https://i.ibb.co/PY7hRgG/image-computer.png" class="image" alt="image-computer" border="0">
+      <dl>
+        <dt>Quick Search</dt>
+        <dd>Easily search your snippets by content, category, web address, application, and more.</dd>
+        <dt>iCloud Sync</dt>
+        <dd>Instantly saves and syncs snippets across all your devices.</dd>
+        <dt>Complete History</dt>
+        <dd>Retrieve any snippets from the first moment you started using the app.</dd>
+      </dl>
     </div>
   
-    <div class="second-box">
-      <p>You’ve used <span>815 GB</span> of your storage</p>
-      <div class="bar">
-      </div>
+    <h2>Access Clipboard anywhere</h2>
+    <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
+      snippets in a few simple clicks.</p>
+    <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices" border="0">
+    <h2>Supercharge your workflow</h2>
+    <p>We’ve got the tools to boost your productivity.</p>
+    <dl class="tools">
       <div>
-        <p>0 GB</p>
-        <p>1000 GB</p>
+        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
+        <dd>
+          <p>Create blacklists</p>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </dd>
       </div>
-      <div class="data-box">
-        <p> 185 <span>GB LEFT</span></p>
+  
+      <div>
+        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-text.svg" alt="icon-text"></dt>
+        <dd>
+          <p>Plain text snippets</p>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </dd>
       </div>
+  
+      <div>
+        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-preview.svg" alt="icon-preview"></dt>
+        <dd>
+          <p>Sneak preview</p>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </dd>
+      </div>
+    </dl>
+  </section>
+  
+  <div class="flexbox">
+    <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google" border="0">
+    <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm" border="0">
+    <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft" border="0">
+    <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp" border="0">
+    <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics" border="0">
+  </div>
+  
+  <section>
+    <h1>Clipboard for iOS and Mac OS</h1>
+    <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+      and you’re ready to start adding to your clipboard.</p>
+    <div class="buttons">
+      <button>Download for iOS</button>
+      <button>Download for Mac</button>
+    </div>
+  </section>
+  
+  <footer>
+    <div>
+      <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" class="logo" alt="logo"></a>
+      <ul>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Press Kit</a></li>
+        <li><a href="#">Install Guide</a></li>
+      </ul>
     </div>
   
-  </main>
+    <div>
+      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-facebook.svg" alt="facebook-icon">
+      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-twitter.svg" alt="twitter-icon">
+      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-instagram.svg" alt="instagram-icon">
+    </div>
+  </footer>
 </body>
 </html>
