fixed some issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <section class="main">
+  <section class="main" role="main">
     <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" alt="logo"></a>
     <h1>A history of everything you copy</h1>
     <p>Clipboard allows you to track and organize everything you
@@ -23,13 +23,13 @@
     </div>
   </section>
   
-  <section class="about">
+  <section class="about" role="region" aria-label="About">
     <h1>Keep track of your snippets</h1>
     <p>Clipboard instantly stores any item you copy in the cloud,
       meaning you can access your snippets immediately on all your
       devices. Our Mac and iOS apps will help you organize everything.</p>
-    <div class="snippet-tracking">
-      <img src="https://i.ibb.co/PY7hRgG/image-computer.png" class="image" alt="image-computer" border="0">
+    <div class="snippet-tracking" role="list" aria-label="Snippet Tracking">
+      <img src="https://i.ibb.co/PY7hRgG/image-computer.png" class="image" alt="image-computer">
       <dl>
         <dt>Quick Search</dt>
         <dd>Easily search your snippets by content, category, web address, application, and more.</dd>
@@ -43,10 +43,10 @@
     <h2>Access Clipboard anywhere</h2>
     <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
       snippets in a few simple clicks.</p>
-    <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices" border="0">
+    <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices">
     <h2>Supercharge your workflow</h2>
     <p>We’ve got the tools to boost your productivity.</p>
-    <dl class="tools">
+    <dl class="tools" role="list" aria-label="Workflow Tools">
       <div>
         <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
         <dd>
@@ -73,15 +73,15 @@
     </dl>
   </section>
   
-  <div class="flexbox">
-    <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google" border="0">
-    <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm" border="0">
-    <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft" border="0">
-    <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp" border="0">
-    <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics" border="0">
+  <div class="flexbox" role="list" aria-label="Company Logos">
+    <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google">
+    <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm">
+    <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft">
+    <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp">
+    <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics">
   </div>
   
-  <section>
+  <section role="region" aria-label="Download Section">
     <h1>Clipboard for iOS and Mac OS</h1>
     <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
       and you’re ready to start adding to your clipboard.</p>
@@ -91,7 +91,7 @@
     </div>
   </section>
   
-  <footer>
+  <footer role="contentinfo" aria-label="Footer">
     <div>
       <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" class="logo" alt="logo"></a>
       <ul>
