--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
   </section>
   
-  <section class="about" role="region" aria-label="About">
+  <section class="about" aria-label="About">
     <h1>Keep track of your snippets</h1>
     <p>Clipboard instantly stores any item you copy in the cloud,
       meaning you can access your snippets immediately on all your
       devices. Our Mac and iOS apps will help you organize everything.</p>
-    <div class="snippet-tracking" role="list" aria-label="Snippet Tracking">
+    <div class="snippet-tracking" role="group" aria-label="Snippet Tracking">
       <img src="https://i.ibb.co/PY7hRgG/image-computer.png" class="image" alt="image-computer">
       <dl>
         <dt>Quick Search</dt>
@@ -46,7 +46,7 @@
     <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices">
     <h2>Supercharge your workflow</h2>
     <p>We’ve got the tools to boost your productivity.</p>
-    <dl class="tools" role="list" aria-label="Workflow Tools">
+    <dl class="tools" aria-label="Workflow Tools">
       <div>
         <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
         <dd>
@@ -73,7 +73,7 @@
     </dl>
   </section>
   
-  <div class="flexbox" role="list" aria-label="Company Logos">
+  <div class="flexbox" role="group" aria-label="Company Logos">
     <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google">
     <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm">
     <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft">
@@ -81,7 +81,7 @@
     <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics">
   </div>
   
-  <section role="region" aria-label="Download Section">
+  <section aria-label="Download Section">
     <h1>Clipboard for iOS and Mac OS</h1>
     <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
       and you’re ready to start adding to your clipboard.</p>
@@ -91,7 +91,7 @@
     </div>
   </section>
   
-  <footer role="contentinfo" aria-label="Footer">
+  <footer aria-label="Footer">
     <div>
       <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" class="logo" alt="logo"></a>
       <ul>
