--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices">
     <h2>Supercharge your workflow</h2>
     <p>We’ve got the tools to boost your productivity.</p>
-    <dl class="tools" aria-label="Workflow Tools">
+    <dl class="tools">
       <div>
         <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
         <dd>
@@ -73,13 +73,15 @@
     </dl>
   </section>
   
-  <div class="flexbox" role="group" aria-label="Company Logos">
-    <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google">
-    <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm">
-    <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft">
-    <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp">
-    <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics">
-  </div>
+  <aside role="group" aria-label="Company Logos">
+    <div class="flexbox">
+      <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google">
+      <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm">
+      <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft">
+      <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp">
+      <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics">
+    </div>
+  </aside>
   
   <section aria-label="Download Section">
     <h1>Clipboard for iOS and Mac OS</h1>
