fixed some issues

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 </head>
 <body>
-
   <section class="main" role="main">
-    <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" alt="logo"></a>
+    <a href="#"><img src="/images/logo.svg" alt="logo"></a>
     <h1>A history of everything you copy</h1>
     <p>Clipboard allows you to track and organize everything you
       copy. Instantly access your clipboard on all your devices.</p>
@@ -29,7 +28,7 @@
       meaning you can access your snippets immediately on all your
       devices. Our Mac and iOS apps will help you organize everything.</p>
     <div class="snippet-tracking" role="group" aria-label="Snippet Tracking">
-      <img src="https://i.ibb.co/PY7hRgG/image-computer.png" class="image" alt="image-computer">
+      <img src="/images/image-computer.png" class="image" alt="image-computer">
       <dl>
         <dt>Quick Search</dt>
         <dd>Easily search your snippets by content, category, web address, application, and more.</dd>
@@ -43,12 +42,12 @@
     <h2>Access Clipboard anywhere</h2>
     <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
       snippets in a few simple clicks.</p>
-    <img src="https://i.ibb.co/FxM1qmh/image-devices.png" class="image" alt="image-devices">
+    <img src="/images/image-devices.png" class="image" alt="image-devices">
     <h2>Supercharge your workflow</h2>
     <p>We’ve got the tools to boost your productivity.</p>
     <dl class="tools">
       <div>
-        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
+        <dt><img src="/images/icon-blacklist.svg" alt="icon-blacklist"></dt>
         <dd>
           <p>Create blacklists</p>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
@@ -56,7 +55,7 @@
       </div>
   
       <div>
-        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-text.svg" alt="icon-text"></dt>
+        <dt><img src="/images/icon-text.svg" alt="icon-text"></dt>
         <dd>
           <p>Plain text snippets</p>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
@@ -64,7 +63,7 @@
       </div>
   
       <div>
-        <dt><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-preview.svg" alt="icon-preview"></dt>
+        <dt><img src="/images/icon-preview.svg" alt="icon-preview"></dt>
         <dd>
           <p>Sneak preview</p>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
@@ -73,13 +72,13 @@
     </dl>
   </section>
   
-  <aside role="group" aria-label="Company Logos">
+  <aside role="complementary" aria-label="Company Logos">
     <div class="flexbox">
-      <img src="https://i.ibb.co/Gtp0L0S/logo-google.png" alt="logo-google">
-      <img src="https://i.ibb.co/CMFS3x3/logo-ibm.png" alt="logo-ibm">
-      <img src="https://i.ibb.co/NKVyvLm/logo-microsoft.png" alt="logo-microsoft">
-      <img src="https://i.ibb.co/QCZPWX8/logo-hp.png" alt="logo-hp">
-      <img src="https://i.ibb.co/nbVpFnc/logo-vector-graphics.png" alt="logo-vector-graphics">
+      <img src="/images/logo-google.png" alt="logo-google">
+      <img src="/images/logo-ibm.png" alt="logo-ibm">
+      <img src="/images/logo-microsoft.png" alt="logo-microsoft">
+      <img src="/images/logo-hp.png" alt="logo-hp">
+      <img src="/images/logo-vector-graphics.png" alt="logo-vector-graphics">
     </div>
   </aside>
   
@@ -95,7 +94,7 @@
   
   <footer aria-label="Footer">
     <div>
-      <a href="#"><img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/logo.svg" class="logo" alt="logo"></a>
+      <a href="#"><img src="/images/logo.svg" class="logo" alt="logo"></a>
       <ul>
         <li><a href="#">FAQs</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -106,9 +105,9 @@
     </div>
   
     <div>
-      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-facebook.svg" alt="facebook-icon">
-      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-twitter.svg" alt="twitter-icon">
-      <img src="https://raw.githubusercontent.com/Deepali25-K/clipboard_landing_page/main/images/icon-instagram.svg" alt="instagram-icon">
+      <img src="/images/icon-facebook.svg" alt="facebook-icon">
+      <img src="/images/icon-twitter.svg" alt="twitter-icon">
+      <img src="/images/icon-instagram.svg" alt="instagram-icon">
     </div>
   </footer>
 </body>
