--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </dl>
   </section>
   
-  <aside role="complementary" aria-label="Company Logos">
+  <aside aria-label="Company Logos">
     <div class="flexbox">
       <img src="/images/logo-google.png" alt="logo-google">
       <img src="/images/logo-ibm.png" alt="logo-ibm">
